overflow fix
fixed overflox-x

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,7 @@ body {
     font-family: $font-raleway;
     min-width: 320px;
     font-weight: 400;
+    overflow-x: hidden;
 }
 
 li {
